# sqlite3-incremental-backup

./: .gitignore  LICENSE  README.md  backup.js  generate_database.py  test.sh
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  codeql.yml  consistency.yml  node.js.yml
c/: main.c  sqlite3incremental.h
java/: Test.java
java/nokib/SQLite3Incremental/: SQLite3Incremental.java
nodejs/: .gitignore  README.md  backup.js  backup.mjs  package-lock.json  package.json  sqlite3-incremental-backup.mjs  test.mjs
python/: .gitignore  __main__.py  pyproject.toml  test_backup.py
python/sqlite3backup/: .gitignore  __init__.py  __main__.py  setup.py
